--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -1,4 +1,4 @@
 {{ define "main" }}
-  <h2 class="pb-3">{{ .Title }}</h2>
+  <h1>{{ .Title }}</h1>
   <div id="content">{{ .Content }}</div>
 {{ end }}
