--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <h2>{{ .Title }}</h2>
-  <h3 class="pb-3 font-light text-base">{{ dateFormat "Jan 2, 2006" .Date }} // ~{{ .ReadingTime }} minutes</h3>
+  <h2 class="blog-header">{{ .Title }}</h2>
+  <p>{{ dateFormat "Jan 2, 2006" .Date }} // <mark>{{ .ReadingTime }} minutes</mark></p>
   <div id="content">{{ .Content }}</div>
 {{ end }}
