--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -1,13 +1,8 @@
 {{ define "main" }}
-  <h2>{{ .Title }}</h2>
-  <ul class="list-reset mb-4 pt-6">
-    {{ range (.Paginator 50).Pages }}
-    <a class="no-underline" rel="noreferrer" href="{{ .URL }}">
-      <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded inline-flex items-center mb-1">
-        <span>{{ .Title }}</span>
-      </button>
-    </a>
-    {{ end }}
-    {{ partial "pagination.html" . }}
-  </ul>
+<h2>{{ .Title }}</h2>
+  {{ range (.Paginator 50).Pages }}
+  <a class="label label-rounded label-primary label-review" href="{{ .URL }}">{{ .Title }}</a>
+  </a>
+  {{ end }}
+  {{ partial "pagination.html" . }}
 {{ end }}
