Updated the front page and removed unused footer + js stuff

--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -6,7 +6,9 @@
 </div>
 <div class="off-canvas-sidebar" id="sidebar">
     <div class="brand">
-        <h4>utf9k</h4>
+        <a href="/">
+            <h4>utf9k</h4>
+        </a>
     </div>
     <ul class="nav">
         {{ if .Site.Menus.main }}
