--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <h2 class="pb-3">404 Not Found</h2>
+  <h2>404 Not Found</h2>
   <div id="content">
     <p>Whoa there! You've reached the edge of this site!</p>
     <p>Good thing this page caught you or else you'd have strayed into non-existent waters.</p>
