--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,18 +1,20 @@
 {{ define "main" }}
-  <h2 class="text-2xl font-bold mb-2">Welcome!</h2>
-  
-  <p class="text-lg mb-3">I'm Marcus Crane, a <a class="dashed-anchor" target="_blank" href="{{ $.Site.Data.meta.JobLink }}">{{ $.Site.Data.meta.Job }}</a> at <a class="dashed-anchor" target="_blank" href="{{ $.Site.Data.meta.WorkLink }}">{{ $.Site.Data.meta.Work }}</a> in <a class="dashed-anchor" target="_blank" href="{{ $.Site.Data.meta.LocationLink }}">{{ $.Site.Data.meta.Location }}.</a></p>
+  <h2>Welcome!</h2>
+  <div id="content">
+    
+    <p>I'm Marcus Crane, a <a class="dashed-anchor" target="_blank" href="{{ $.Site.Data.meta.JobLink }}">{{ $.Site.Data.meta.Job }}</a> at <a class="dashed-anchor" target="_blank" href="{{ $.Site.Data.meta.WorkLink }}">{{ $.Site.Data.meta.Work }}</a> in <a class="dashed-anchor" target="_blank" href="{{ $.Site.Data.meta.LocationLink }}">{{ $.Site.Data.meta.Location }}</a>.</p>
 
-  <p class="text-lg mb-3">This site acts as my portfolio but more importantly, it's my own little playground on the web!</p>
+    <p>There's a jumble of content available from portfolio entries to game reviews and it's generally expanding whenever I have time to add more.</p>
 
-  <p class="text-lg mb-3">Heck, you can even view the source right <a class="dashed-anchor" target="_blank" href="https://github.com/marcus-crane/utf9k">here.</a></p>
+    <p>You can also view the source of this site on <a class="dashed-anchor" target="_blank" href="https://github.com/marcus-crane/utf9k">Github</a>.</p>
 
 
-  <p class="text-lg mb-3">I'm around the web in a bunch of places:</p>
+    <p>I'm around the web in a bunch of places:</p>
 
-  {{ range $site, $url := $.Site.Data.social }}
-    <a class="no-underline" target="_blank" rel="noreferrer" href="{{ $url }}">
-      <button class="bg-grey-light hover:bg-grey text-grey-darkest font-bold py-2 px-4 rounded mb-1">{{ $site }}</button>
-    </a>
-  {{ end }}
+    {{ range $site, $url := $.Site.Data.social }}
+      <a href="{{ $url }}">
+        <i class="fab fa-{{ $site }} fa-icon"></i>
+      </a>
+    {{ end }}
+  </div>
 {{ end }}
