--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,15 @@ body {
     margin-bottom: .2rem;
 }
 
+a:hover {
+    text-decoration: none;
+}
+
+.fa-icon {
+    font-size: 60px;
+    padding: 0 .3em;
+}
+
 /* Code styles */
 
 .highlight code {
