--- a/layouts/page/single.html
+++ b/layouts/page/single.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
-  <h1>{{ .Title }}</h1>
-  <div id="content">{{ .Content }}</div>
+  <div id="content">
+    <h1>{{ .Title }}</h1>
+    {{ .Content }}
+  </div>
 {{ end }}
