--- a/layouts/projects/single.html
+++ b/layouts/projects/single.html
@@ -1,11 +1,13 @@
 {{ define "main" }}
-  <h2 class="blog-header">{{ .Title }}</h2>
-  <p>
-    {{ dateFormat "January 2006" .Date }}
-    {{ if .Params.Links }} // {{ end }}
-    {{ range $source, $url := .Params.Links }}
-    [ <a href={{ $url }}><i class="fab fa-{{ $source }}"></i></a> ]
-    {{ end }}
-  </p>
-  <div id="content">{{ .Content }}</div>
+  <div id="content">
+    <h2 class="blog-header">{{ .Title }}</h2>
+    <p>
+      {{ dateFormat "January 2006" .Date }}
+      {{ if .Params.Links }} // {{ end }}
+      {{ range $source, $url := .Params.Links }}
+      [ <a href={{ $url }}><i class="fab fa-{{ $source }}"></i></a> ]
+      {{ end }}
+    </p>
+    {{ .Content }}
+  </div>
 {{ end }}
