--- a/layouts/tags/single.html
+++ b/layouts/tags/single.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
-  <h2>{{ .Title }}</h2>
-  <h3 class="pb-3 font-light text-base">{{ dateFormat "Jan 2, 2006" .Date }}</h3>
-  <div id="content">{{ .Content }}</div>
+  <div id="content">
+    <h2>{{ .Title }}</h2>
+    <h3 class="pb-3 font-light text-base">{{ dateFormat "Jan 2, 2006" .Date }}</h3>
+    {{ .Content }}
+  </div>
 {{ end }}
