--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,20 +1,19 @@
 {{ define "main" }}
   <div id="content">
-    <h2>Welcome!</h2>
+    <h1>Welcome!</h1>
     
     <p>I'm Marcus Crane, a <a class="dashed-anchor" target="_blank" href="{{ $.Site.Data.meta.JobLink }}">{{ $.Site.Data.meta.Job }}</a> at <a class="dashed-anchor" target="_blank" href="{{ $.Site.Data.meta.WorkLink }}">{{ $.Site.Data.meta.Work }}</a> in <a class="dashed-anchor" target="_blank" href="{{ $.Site.Data.meta.LocationLink }}">{{ $.Site.Data.meta.Location }}</a>.</p>
 
-    <p>There's a jumble of content available from portfolio entries to game reviews and it's generally expanding whenever I have time to add more.</p>
+    <p>I'm always moving this site around but for now, you can read some blog posts I've written <a href="/blog">here</a>.
 
-    <p>You can also view the source of this site on <a class="dashed-anchor" target="_blank" href="https://github.com/marcus-crane/utf9k">Github</a>.</p>
-
+    <p>You can also view the source of this site on <a target="_blank" href="https://github.com/marcus-crane/utf9k">Github</a>.</p>
 
     <p>I'm around the web in a bunch of places:</p>
 
-    {{ range $site, $url := $.Site.Data.social }}
-      <a href="{{ $url }}">
-        <i class="fab fa-{{ $site }} fa-icon"></i>
-      </a>
-    {{ end }}
+    <ul>
+      {{ range $site, $url := $.Site.Data.social }}
+        <li><a href="{{ $url }}">{{ $site }}</a></li>
+      {{ end }}
+    </ul>
   </div>
 {{ end }}
