--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>utf9k</title>
+  <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
   {{ content }}
