Fixed up RSS support

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 <head>
   <title>utf9k</title>
   <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
+  <link type="application/atom+xml" rel="alternate" href="/rss.xml" title="utf9k" />
 </head>
 <body>
   {{ content }}
