--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,11 @@
 <html>
 <head>
   <title>utf9k</title>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <meta name="theme-color" content="#a463f2" />
+  <meta name="author" content="Marcus Crane">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
   <link type="application/atom+xml" rel="alternate" href="/rss.xml" title="utf9k" />
 </head>
