--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<a id="back" href="/">⏎</a>
+<a id="back" href="/">➲</a>
 <h1>{{ title }}</h1>
 <div id="content">
   {{ content }}
