--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,14 @@ layout: default
 ---
 
 <a id="back" href="/">➲</a>
-<h1>{{ title }}</h1>
+<h1>{{ page.title }}</h1>
+<p>{{ page.date }}</p>
+{{ page.url }}
+{{ page.path }}
+{{ site.pages }}
+{{ page.dir }}
+{{ page.categories }}
+{{ page.tags }}
 <div id="content">
   {{ content }}
 </div>
