Updated styling to be more generic

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
   <link href="/static/css/style.css" rel="stylesheet" type="text/css" />
   <link href="/static/css/asciidoc.css" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Crimson+Pro:400,700&display=swap" rel="stylesheet">
   <link type="application/atom+xml" rel="alternate" href="/rss.xml" title="utf9k" />
 </head>
 <body>
