--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,7 +1,10 @@
-<nav class="db dt-l w-100 border-box pa3 ph5-l">
-  <a class="db dtc-l v-mid mid-gray link dim w-100 w-25-l tc tl-l mb2 mb0-l" href="/" title="utf9k">utf9k</a>
-  <div class="db dtc-l v-mid w-100 w-75-l tc tr-l">
-    <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="/blog" title="Blog">blog</a>
-    <a class="link dim dark-gray f6 f5-l dib mr3 mr4-l" href="/reviews" title="Reviews">reviews</a>
+<nav class="db dt-ns center w-100">
+  <div class="pa3 pl3 db dtc-ns v-mid tl w-50">
+    <a class="link hover-hot-pink b f6 f5-ns dib" href="/">
+      utf9k
+    </a>
+  </div>
+  <div class="pa3-ns pl3 pr3 pb3 db dtc-ns v-mid w-100 tl tr-ns mt2-ns mt0">
+    <a class="f6 fw6 hover-blue link mr2 dib" href="/blog" title="words and letters">blog</a>
   </div>
 </nav>
