--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,12 +1,14 @@
 {{ define "main" }}
-  <div class="pa3 pa5-ns">
-    <h4 class="f6 fw6">{{ .Title }}</h4>
+  <section class="pa3 pa4-m pa5-l">
     {{ range .Pages }}
     <dl class="f6 lh-title mv2">
-      <dt class="dib gray list-date">{{ .Date.Format "Jan 02 2006" }}</dt>
-      <dd class="dib">
-        <a class="link dim dark-gray" href="{{ .RelPermalink }}">{{ .Title }}</a>
+      <dt class="dib ml0 gray">{{ .Date.Format "Jan 02 2006" }}</dt>
+      <dd class="dib red">
+        <a class="b link" href="{{ .RelPermalink }}">
+          {{ .Title }}
+        </a>
       </dd>
     </dl>
     {{ end }}
+  </section>
 {{ end }}
