Ported enough to old blog style to ship it out

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -9,11 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
    
     <link href="/css/tachyons.min.css" rel="stylesheet" />
+    <link href="/css/oceanicnext.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
     <link type="application/atom+xml" rel="alternate" href="/rss.xml" title="utf9k" />
   </head>
   <body>
     {{ partial "navigation.html" . }}
-    <section class="pa3 bt b--black-10 black-70">
+    <section class="pa3 bt b--black-10 black-80">
       {{ block "main" . }}{{ end }}
     </section>
   </body>
