--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,106 +1,126 @@
-/****
- Custom CSS
-****/
+/* Globals */
+
+h1, h2, h3, h4, h5, h6, p, a, b, dd, dl, dt, 
+time, input, small, label, legend, textarea,
+input, button {
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  font-weight: 400;
+}
+
+/* Home */
+
+p.home {
+  margin: 18px 0;
+}
+
+/* Sticky footer */
 
 body {
-  background: #deeffe;
-  font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", sans-serif;
-  margin: 0;
-  max-width: 100%;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+
+article #pager { flex: 1; }
+
+/* Post Detail */
+
+#title {
+  margin-bottom: 0.2em;
+}
+
+.meta p {
+    font-style: italic;
+    margin: 0;
+}
+
+#content p:fist-child {
+  margin-top: 0;
+}
+
+#content h1 {
+  font-size: 1.25rem;
+  font-weight: 600;
+}
+
+#content h2 {
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+#content p {
+  font-size: 18px;
+  line-height: 1.4;
+  word-break: break-word;
+}
+
+code {
+  color: #F99157;
+  font-size: 85%;
+}
+
+#content p code {
+  background-color: #1B2B34;
+  border-radius: 4px;
+  padding: .275rem;
+}
+
+thead tr th, tbody tr td, tbody tr td a {
+  font-family: monospace;
+}
+
+/* Tables */
+
+table {
+  border-collapse: collapse;
   padding: 0;
-  word-wrap: break-word;
+  width: 100%;
+  color: #65737E;
 }
 
-dt.list-date {
-  width: 7rem;
+table tr {
+  background-color: #1B2B34;
+  margin: 0;
+  padding: 0; 
 }
 
-/****
- Asciidoctor
-****/
-
-/* Admonitions and icons */
-
-span.icon>.fa {
-  cursor: default;
+table tr:nth-child(2n) {
+  background-color: #1B2B34;
 }
 
-.admonitionblock td.icon {
-  text-align: center;
-  width: 80px;
-}
-
-.admonitionblock td.icon [class^="fa icon-"] {
-  font-size: 2.5em;
-  text-shadow: 1px 1px 2px rgba(0,0,0,.5);
-  cursor: default;
-}
-
-.admonitionblock td.icon .icon-note:before {
-  content: "\f05a";
-  color: #19407c;
-}
-
-.admonitionblock td.icon .icon-tip:before {
-  content: "\f0eb";
-  text-shadow: 1px 1px 2px rgba(155,155,0,.8);
-  color: #111;
-}
-
-.admonitionblock td.icon .icon-warning:before {
-  content: "\f071";
-  color: #bf6900;
-}
-
-.admonitionblock td.icon .icon-caution:before {
-  content: "\f06d";
-  color: #bf3400;
-}
-
-.admonitionblock td.icon .icon-important:before {
-  content: "\f06a";
-  color: #bf0000;
-}
-
-/* Callouts */
-
-.conum[data-value] {
-  display: inline-block;
-  color: #fff !important;
-  background: rgba(0,0,0,.8);
-  -webkit-border-radius: 1em;
-  border-radius: 1em;
-  text-align: center;
-  font-size: .75em;
-  width: 1.67em;
-  height: 1.67em;
-  line-height: 1.67em;
-  font-family: "Open Sans", "DejaVu Sans", sans-serif;
-  font-style: normal;
+table tr th {
   font-weight: bold;
+  text-align: left;
+  margin: 0;
+  padding: .75rem;
 }
 
-.conum[data-value] * {
-  color: #fff !important;
+table tr td {
+  text-align: left;
+  margin: 0;
+  padding: .75rem;
 }
 
-.conum[data-value] + b {
-  display: none;
+table tr th :first-child, table tr td :first-child {
+  margin-top: 0;
 }
 
-.conum[data-value]::after {
-  content: attr(data-value);
+table tr th :last-child, table tr td :last-child {
+  margin-bottom: 0;
 }
 
-pre .conum[data-value] {
-  position: relative;
-  top: -.125em;
+table tr a {
+  color: #D8DEE9;
 }
 
-b.conum * {
-  color: inherit !important;
+#content table p {
+  font-family: Consolas, monaco, monospace;
+  font-size: 85%;
+  color: #65737E;
 }
 
-.conum:not([data-value]):empty {
-  display: none;
+h1 a {
+  text-decoration: none;
 }
