Add width constraint for larger screens to aid readability

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <article class="cf ph3 ph6-m ph7-l pv4 sans-serif">
+  <article class="cf w-75-l ph3 ph6-m ph7-l pv4 sans-serif">
     <header class="mb2">
       <h1 class="f2 fw9 f-headline-l mb1 mt0 dib">
         {{ .Title }}
