--- a/static/css/style.css
+++ b/static/css/style.css
@@ -75,6 +75,10 @@ table {
   width: 100%;
 }
 
+thead {
+  text-align: left;
+}
+
 blockquote {
   border-left: .1rem solid #ff9b00;
   margin-left: 0;
