Updated some wording and moved Now page to navbar

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
 <div id="content">
   <p>Hey there</p>
-  <p>I'm Marcus, and this is my personal site.</p>
+  <p>I'm <a href="/about">Marcus Crane</a>, and this is my personal site.</p>
   <p>There's a few bits and pieces: mainly my blog content but also other writings floating around</p>
 
   <h2>Some recent blog posts</h2>
