--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
         <span class="header-right">
             <a href="/about">About</a>
             //
-            <a href="/contact">Contact</a>
+            <a href="/now">Now</a>
             //
             <a href="/index.xml">RSS</a>
         </span>
